--- a/style.css
+++ b/style.css
@@ -89,9 +89,11 @@ button:hover {
 
 .personal-links > h2 {
   color: aliceblue;
+  margin-left: 4rem;
 }
 
 .personal-links > h3 {
   color: aliceblue;
   margin-top: -2rem;
+  margin-left: 8rem;
 }
